# aria2-magnet-extract

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
